--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -1,6 +1,14 @@
 @import "basic"
+@import "credits"
 @import "navigation"
 @import "ide"
+
+.layout
+	&.dropdown
+		&.credits
+			top: 0px
+		&.left-nav-bar-wrap, &.page-wrap
+			top: 100px
 
 html
 	overflow: hidden
