--- a/public/css/sass/home.sass
+++ b/public/css/sass/home.sass
@@ -1,7 +1,13 @@
 @import "basic"
-@import url("http://fonts.googleapis.com/css?family=Source+Code+Pro:200,300,400")
+@import "credits"
 
-
+.layout
+	&.dropdown
+		&.credits
+			top: 0px
+		&.left-nav-bar-wrap, &.page-wrap
+			top: 100px
+			
 .page-wrap
 
 	.title-sequence
@@ -17,12 +23,7 @@
 		background: lighten($monokai-bg,10%)
 
 		p
-			color: $monokai-yellow
-			white-space: pre-wrap
-			font-family: monospace
-			font-size: 18pt
-			text-align: center
-			text-shadow: 2px 2px 0px darken($monokai-yellow,40%)
+			@extend .ascii-art
 
 		.subtitle
 			font-size: 12pt
